<resources>
    <string name="app_name">Grocery App</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="recover_password">Recover Password</string>
    <string name="recover">Recover</string>
    <string name="register">Register</string>
    <string name="register_user">Register User</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="shop_name">Shop Name</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="register_seller">Register Seller</string>
    <string name="are_you_a_seller_register_as_seller">Are you a seller? Register as Seller</string>
    <string name="complete_address">Complete Address</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="shop_open">Shop Open</string>
    <string name="add_product">Add Product</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="quantity_e_g_kg_g_etc">Quantity e.g. kg, g etc.</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="discount_price">Discount Price</string>
    <string name="discount_note">Discount Note</string>
    <string name="discount_note_e_g_10_off">Discount Note e.g. 10% Off</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="_10_off">10% OFF</string>
    <string name="_1_kg">1 KG</string>
    <string name="_10">$10</string>
    <string name="_20">$20</string>
    <string name="search">Search</string>
    <string name="showing_all">Showing All</string>
    <string name="product_details">Product Details</string>
    <string name="the_product_title">The Product Title</string>
    <string name="the_product_description">The Product Description</string>
    <string name="quantity">Quantity</string>
    <string name="_15">$15</string>
    <string name="update_product">Update Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="shops">Shops</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_description">Product Description</string>
    <string name="_42_99">42.99</string>
    <string name="the_original_review_of_the_user">The original review of the user</string>
</resources>