<?xml version="1.0" encoding="utf-8"?>
<!--bottom sheet layout to display product details and edit/delete options-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!---->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/shape_rect01"
        android:padding="@dimen/_10sdp">
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@null"
            android:src="@drawable/ic_back_white"/>
        <ImageButton
            android:id="@+id/deleteBtn"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@null"
            android:src="@drawable/ic_delete_white"
            android:layout_alignParentEnd="true"/>

        <ImageButton
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/deleteBtn"
            android:background="@null"
            android:src="@drawable/ic_edit_white" />
        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/product_details"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/productIconIv"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@color/colorPrimary"
        android:adjustViewBounds="true"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add_shopping_white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productIconIv"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/discountNoteTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rect05"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_10ssp"
            android:text="@string/_10_off"
            android:paddingEnd="@dimen/_5sdp"
            android:textColor="@color/colorGreen"/>
        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/the_product_title"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/the_product_description"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:id="@+id/categoryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/category"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:id="@+id/quantityTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/quantity"
            android:textColor="@color/colorBlack"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">
            <TextView
                android:id="@+id/discountedPriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/colorGray02"/>
            <TextView
                android:id="@+id/originalPriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15"
                android:layout_toEndOf="@+id/discountedPriceTv"
                android:textColor="@color/colorGray02"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>