<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/_1sdp"
    app:cardElevation="@dimen/_3sdp"
    app:contentPadding="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productIconIv"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add_shopping_primary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_toEndOf="@id/productIconIv">


            <TextView
                android:id="@+id/discountedNoteTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rect05"
                android:text="@string/_10_off"
                android:textColor="@color/colorGreen"/>
            <TextView
                android:id="@+id/titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/title"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/quantityTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_kg"
                android:textColor="@color/colorBlack"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:id="@+id/discountedPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/_10"
                    android:textColor="@color/colorGray02"/>

                <TextView
                    android:layout_toEndOf="@id/discountedPriceTv"
                    android:id="@+id/originalPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/_20"
                    android:textColor="@color/colorGray02"/>

            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/nextIv"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_next_gray"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>